talleres/taller03/codigo_estudiante/*shell*
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ javac TA
error: Class names, 'TA', are only accepted if annotation processing is explicitly requested
1 error
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ javac Taller3.java 
Taller3.java:24: error: no suitable method found for nReinas(int,int,int[],ArrayList<int[]>)
	num = nReinas(0, 0, tablero, num);
	      ^
    method Taller3.nReinas(int) is not applicable
      (actual and formal argument lists differ in length)
    method Taller3.nReinas(int,int[],ArrayList<int[]>) is not applicable
      (actual and formal argument lists differ in length)
1 error
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ javac Taller3.java 
Taller3.java:76: error: missing return statement
    }
    ^
Taller3.java:81: error: missing return statement
    }
    ^
2 errors
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ javac Taller3.java 
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ java Taller3.java 
Error: no se ha encontrado o cargado la clase principal Taller3.java
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ java Taller3
    0 1 2 3 

0   # Q # # 
1   # # # Q 
2   Q # # # 
3   # # Q # 

    0 1 2 3 

0   # # Q # 
1   Q # # # 
2   # # # Q 
3   # Q # # 

2
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ 
]0;~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
danys@DESKTOP-D0JOPKG ~/RepoUNi/datos2/ST0247-032/talleres/taller03/codigo_estudiante
$ 